[gd_scene load_steps=2 format=2]

[ext_resource path="res://Source/Scripts/Interface/GameOverScreen.gd" type="Script" id=1]

[node name="GameOverScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.615686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.3
anchor_top = 0.378
anchor_right = 0.7
anchor_bottom = 0.378
margin_top = -24.08
margin_right = -3.05176e-05
margin_bottom = 23.92
text = "You have been lit.
Game Over."
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="Panel"]
anchor_left = 0.4
anchor_top = 0.783
anchor_right = 0.6
anchor_bottom = 0.783
margin_top = -9.88
margin_bottom = 10.12
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="Panel"]
anchor_left = 0.4
anchor_top = 0.872
anchor_right = 0.6
anchor_bottom = 0.872
margin_top = -9.92001
margin_bottom = 10.08
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Panel/MenuButton" to="." method="_on_MenuButton_pressed"]
